box re factoring done

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1{
     color: orange;
 }
 
-section{
+.flexible-container{
 
     display: flex;
     margin-bottom: 100px;
@@ -81,4 +81,14 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right bottom;
+}
+
+.box-right{
+    width: 50%;
+    padding-left: 5%;
+}
+
+.box-left{
+    width: 50%;
+    padding-left: 5%;
 }
