--- a/style.css
+++ b/style.css
@@ -1,126 +1,142 @@
-
-
-body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-h1{
-    font-size: 50px;    
+h1 {
+  font-size: 50px;
 }
 
-.name{
-    color: orange;
+.name {
+  color: orange;
 }
 
-.flexible-container{
-
-    display: flex;
-    margin-bottom: 100px;
+.flexible-container {
+  display: flex;
+  margin-bottom: 100px;
 }
 
-
-.header-left{
-    width: 50%;
-    padding-left: 5%;
+.header-left {
+  width: 50%;
+  padding-left: 5%;
 }
-.header-right{
-    width: 50%;
-    padding-left: 5%;
-}
-
-.header-right img{
-    width: 80%;
-
-}
-.hire-button{
-    font-weight: bold;
-    text-decoration: none;
-    background-image: linear-gradient(orange,tomato);
-    color: white;
-    padding: 10px 30px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-
-}
-.top-banner{
-    background-image: url(images/top-banner.png);
-    background-repeat: no-repeat;
+.header-right {
+  width: 50%;
+  padding-left: 5%;
 }
 
-.dream-right{
-    width: 50%;
-    padding-left: 5%;
+.header-right img {
+  width: 60%;
+  margin-top: 10%;
+}
+.hire-button {
+  font-weight: bold;
+  text-decoration: none;
+  background-image: linear-gradient(orange, tomato);
+  color: white;
+  padding: 10px 30px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.top-banner {
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
 }
 
-.dream-left img{
-    width: 80%;
+.dream-right {
+  width: 50%;
+  padding-left: 5%;
 }
 
-.dream-left{
-    width: 50%;
-    padding-left: 5%;
-}
-.download-button{
-    font-weight: bold;
-    text-decoration: none;
-    background-image: linear-gradient(orange,tomato);
-    color: white;
-    padding: 10px 40px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-}
-.dream-big{
-    background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right bottom;
+.dream-left img {
+  width: 60%;
+  margin-top: 10%;
 }
 
-.box-right{
-    width: 40%;
-    padding-left: 5%;
-    padding-right: 5%;
-    box-shadow:10px 10px 40px grey ;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+.dream-left {
+  width: 50%;
+  padding-left: 5%;
+}
+.download-button {
+  font-weight: bold;
+  text-decoration: none;
+  background-image: linear-gradient(orange, tomato);
+  color: white;
+  padding: 10px 40px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.dream-big {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
 }
 
-.box-left{
-    width: 40%;
-    box-shadow:10px 10px 40px grey ;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-}
-.box-left h3{
-   
-    color: orange;
+.box-right {
+  width: 40%;
+  padding-left: 5%;
+  padding-right: 5%;
+  box-shadow: 10px 10px 40px grey;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-left: 10px solid black;
+  border-image: linear-gradient(blue, cyan) 1;
 }
 
-.box-right h3{
-    color: orange;
+.box-left {
+  width: 40%;
+  box-shadow: 10px 10px 40px grey;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-left: 10px solid black;
+  border-image: linear-gradient(orange, tomato) 1;
 }
 
-.boxes-area{
-    background-image: url(images/exp-bg.png);
-    background-repeat: no-repeat;
-    background-position: left center;
+.box-left h3 {
+  color: orange;
+}
+
+.box-right h3 {
+  color: orange;
+}
+
+.boxes-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+.footer h3 {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.footer {
+  background-color: rgb(219, 87, 25);
+  margin-bottom: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.experinces {
+  margin-left: 5%;
 }
