--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1 {
 .header-left {
   width: 50%;
   padding-left: 5%;
+  margin-top: 3%;
 }
 .header-right {
   width: 50%;
@@ -50,6 +51,7 @@ h1 {
 .dream-right {
   width: 50%;
   padding-left: 5%;
+  margin-top: 3%;
 }
 
 .dream-left img {
